samples/_failures_safe/1761516047_8e409b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f9f2e7a.c: In function ‘main’:
./samples/SAFE/__tmp_8f9f2e7a.c:151:22: error: ‘de’ undeclared (first use in this function)
  151 |         buffer_free(&de
      |                      ^~
./samples/SAFE/__tmp_8f9f2e7a.c:151:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8f9f2e7a.c:151:24: error: expected ‘)’ at end of input
  151 |         buffer_free(&de
      |                    ~   ^
      |                        )
./samples/SAFE/__tmp_8f9f2e7a.c:151:9: error: expected declaration or statement at end of input
  151 |         buffer_free(&de
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8f9f2e7a.c:151:9: error: expected declaration or statement at end of input
